--- a/templates/admin_approve.html
+++ b/templates/admin_approve.html
@@ -14,12 +14,12 @@
     Không có sản phẩm nào chờ duyệt!
 </div>
 {% else %}
-<div class="table-container">
+<div class="card shadow-sm border-0"><div class="card-body">
     <div class="table-header">
         <h5><i class="bi bi-clock-history me-2"></i> Sản phẩm chờ duyệt ({{ pending_products|length }})</h5>
     </div>
 
-    <div class="table-responsive">
+    <div class="table-responsive mt-3">
         <table class="table table-hover">
             <thead>
                 <tr>
@@ -72,6 +72,6 @@
             </tbody>
         </table>
     </div>
-</div>
+</div></div>
 {% endif %}
 {% endblock %}
