--- a/templates/reports.html
+++ b/templates/reports.html
@@ -130,7 +130,13 @@
                 <div class="d-flex justify-content-between">
                     <div>
                         <h6 class="text-white-50 mb-1">Tổng giao dịch</h6>
-                        <h3>{{ report_data|length }}</h3>
+                        <h3>
+                            {% if report_type == 'daily' %}
+                            {{ report_data|sum(attribute='transactions') }}
+                            {% else %}
+                            {{ report_data|length }}
+                            {% endif %}
+                        </h3>
                     </div>
                     <div class="display-4">
                         <i class="bi bi-arrow-left-right"></i>
@@ -187,7 +193,13 @@
                 <div class="d-flex justify-content-between">
                     <div>
                         <h6 class="text-white-50 mb-1">Tỷ lệ tăng trưởng</h6>
-                        <h3>+12.5%</h3>
+                        <h3>
+                            {% if report_type == 'daily' %}
+                            {{ "{:+.1f}".format(growth_rate) }}%
+                            {% else %}
+                            -
+                            {% endif %}
+                        </h3>
                     </div>
                     <div class="display-4">
                         <i class="bi bi-graph-up-arrow"></i>
